# external-secrets-bitwarden

./: README.md  pyproject.toml
src/external_secrets_bw/: app.py
